2010-10-25  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: scirus, scitopia, worldwidescience.
	* yahoo: reduced query string to just p and n options.
	* openbsd: support -misc and -tech. Thanks to
	  Sunil Nimmagadda for the patch.
	* removed cddb: gracenote made the "hard decision"
	  to remove the website search. sigh.
	* removed altavista: is now just a front-end to yahoo.
	* removed fast: another yahoo front-end.
	* imdb: fix test.
	* javasun: oracleized URLs.
	* w3link: fixed URL.

2010-08-22  Jameson Rollins <jrollins@finestructure.net>

	* surfraw.IN: Improve listing of elvi.

2010-08-20  James Rowe  <jnrowe@gmail.com>

	* new elvi: ads.  Thanks to Jameson Rollins.

2010-07-02  Ian Beckwith  <ianb@erislabs.net>

	* new elvi: yandex. Thanks to Uspenskiy Andrey.

2010-05-06  Ian Beckwith  <ianb@erislabs.net>

	* uzbl_load_url_from_surfraw: fix menu.
	  Thanks to Sumant Oemrawsingh.
	* Fixed tests: deblists google openbsd.

2010-04-28  Ian Beckwith  <ianb@erislabs.net>

	* configure.in: test for google-chrome, opera and links2.

2010-04-22  Ian Beckwith  <ianb@erislabs.net>

	* debwiki: remove -w, Debian Women wiki is now being merged
	  into main wiki. Thanks to Simone Fittabile.
	* debwiki.test: stop testing -w option.
	* surfraw.IN: change an awk to @AWK@.

2010-04-21  Ian Beckwith  <ianb@erislabs.net>

	* New elvi: jamendo - Search Jamendo: free music with Creative
	  Commons licenses (www.jamendo.com). Thanks to Simone Fittabile.
	* wikipedia, ixquick: Support https. Thanks to Simone Fittabile.
	* wikipedia: tweak Simone's patch to support https for start
	  page and document the SURFRAW_wikipedia_ssl variable.
	* ixquick: add -nossl option.
	* javasun.test: revert to previous test, works again.

2010-04-19  James Rowe  <jnrowe@gmail.com>

	* genpkg: removed, use genportage.

2010-04-16  Ian Beckwith  <ianb@erislabs.net>

	* New elvi:
	  + scroogle: Search Google anonymously via www.scroogle.org.
	  + duckduckgo: Search the web via duckduckgo.com.