@@ -298,6 +298,7 @@ Global options:
                                 Default: yes
                                 Environment: SURFRAW_graphical
   -help                         What you're reading now, dude
+  -lh | -local-help             Just show elvi-specific help, not the global options
   -p | -print                   Just print search URL, don't pass to browser
   -o | -o=FILE                  Fetch URL and dump to stdout or FILE.
   -new[=yes|no]                 Start in a new window
@@ -315,6 +316,9 @@ Copyright:
   Copyright (c) 2000-2001 Julian Assange <proff@iq.org>
   Copyright (c) 2001 Australian Institute for Collaborative Research
   Copyright (c) 2000 Melbourne Institute for Advanced Study
+
+  If you just want to see the elvi-specific help, use
+  elvi -lh or -local-help.
 
   The system wide configuration file can usually be found in
   /etc/xdg/surfraw/conf (but see 'Config files' above). This can be
