@@ -41,7 +41,7 @@ w3_parse_option_hook () {
     case "$opt" in
     -results=*) setopt   SURFRAW_google_results "$optarg" ;;
     -search=*)  setopt   SURFRAW_google_search  "$optarg" ;;
-    -l*)        setoptyn SURFRAW_google_lucky   1         ;;
+    -l|-lu*)    setoptyn SURFRAW_google_lucky   1         ;;
     -country=*) setopt	 SURFRAW_google_country "$optarg" ;;
     *) return 1 ;;
     esac
